# dcase

./: .gitignore
jsonq/: .gitignore  CMakeLists.txt  Makefile
jsonq/example/data0/: commit000.json  commit001.json  data000.json  result.data
jsonq/example/data1/: commit000.json  data000.json  init000.json
jsonq/jsonq/: file.c  io.c  io.h  jsonq-client.c  jsonq.c  jsonq.h  server.c
konoha/: API.idl  Http.k  JsonRpc.js  JsonRpc.k  Makefile  MyappClient.k  README  Syntax.IDL.k  index.html  utils.k
konoha/example/: MyappClient.k
konoha/js/: oop.js
php/: header.php  index.php  navigation.php
web/: .gitignore  api.php  callback.php  command.sql  config.php  config.php.sample  demo.php  echo.php  header.php  home.php  index.php  login.php  navigation.php  sidebar.php  viewer.php
web/dummy/: index.html
web/template/: footer.php  header.php  navigation.php
